<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="8pt" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bListContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_listcontacts"
                android:textSize="8pt" />

            <Button
                android:id="@+id/bGetPhonetics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_getnames"
                android:textSize="8pt" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_filter"
                android:textSize="8pt" />

            <Button
                android:id="@+id/bSetPhonetics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_apply"
                android:textSize="8pt" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lContacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>